--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,8 @@ test:
 production:
   adapter: postgresql
   database: d70mcafcsp8jb8
+  enocoding: unicode
   pool: 5
-  timeout: 5000
   username: lnqayoizjlebzc
   password: wPBEjyBZ5Ro_kBWnKBlLVaS09K
   host: ec2-54-225-124-205.compute-1.amazonaws.com
